--- a/scss/components/editor/_code.scss
+++ b/scss/components/editor/_code.scss
@@ -11,7 +11,7 @@
     font-size: 0.9em;
     text-align: left !important;
 
-    white-space: pre !important;
+    // white-space: pre !important; Was messing with word wrapping
     word-spacing: normal !important;
     word-break: normal !important;
     word-wrap: normal !important;
