--- a/scss/components/ui/_workspace.scss
+++ b/scss/components/ui/_workspace.scss
@@ -39,9 +39,3 @@
   // Scroll-bar was overlapping with X
   padding-right: 0em;
 }
-
-// Sidebar resize handle
-.workspace-leaf-resize-handle {
-  // Removes ugly notch
-  height: calc(100% - 36px) !important;
-}
